--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@vueuse/core": "^9.3.1",
+    "element-plus": "^2.2.19",
     "pinia": "^2.0.21",
     "vue": "^3.2.37"
   },
