--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@formily/antdv": "^1.0.0-alpha.8",
+    "@formily/core": "^2.2.9",
+    "@formily/element-plus": "^1.0.0-beta.7",
+    "@formily/vue": "^2.2.9",
     "@vueuse/core": "^9.3.1",
+    "ant-design-vue": "^3.2.13",
     "element-plus": "^2.2.19",
     "pinia": "^2.0.21",
     "vue": "^3.2.37",
@@ -21,6 +26,7 @@
     "@vitejs/plugin-vue-jsx": "^2.0.0",
     "@vue/tsconfig": "^0.1.3",
     "npm-run-all": "^4.1.5",
+    "sass": "^1.55.0",
     "typescript": "~4.7.4",
     "vite": "^3.0.4",
     "vue-tsc": "^0.39.5"
