--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@formily/core": "^2.2.9",
     "@formily/element-plus": "^1.0.0-beta.7",
     "@formily/vue": "^2.2.9",
+    "@ionic/vue-router": "^7.3.1",
     "@vueuse/core": "^9.3.1",
     "ant-design-vue": "^3.2.13",
     "element-plus": "^2.2.19",
